# CalculateAndPermutations16_qjarishekka

./: pyproject.toml  tests.py
src/CalculateAndPermutations16_qjarishekka.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/CalculateAndPermutations16_qjarishekka/Calc/: __init__.py
src/CalculateAndPermutations16_qjarishekka/Comb/: __init__.py
